--- a/templates/fields_template.html
+++ b/templates/fields_template.html
@@ -28,7 +28,7 @@
         }
 
         .topMargin {
-            margin-top: 20px;
+            margin-top: 100px;
         }
 
         .bottomMargin {
@@ -38,19 +38,19 @@
 </head>
 <body>
 <div class="head_div container_fluid text-center text-white">
-    <h1 class="ui header">Single Cell Schemas</h1>
-    <h4>This is the latest version of SCS (Single Cell Schemas)</h4>
+    <h1 class="ui header">Single Cell Schema</h1>
+
 </div>
 
 {% for component in components %}
 <div class="container bottomMargin">
     <h1 class="topMargin">{{component.group_name}}</h1>
-
+    <hr>
     {% for field in component.fields %}
     <div class="card">
-        {% if field.mandatory %}
-        <h5 class="card-header">
-            {{field.label_element}} <span class="badge bg-dark">Required</span>
+        {% if field.mandatory == "mandatory" %}
+        <h5 class="card-header d-flex align-items-start">
+            {{field.label_element}} <span class="badge bg-dark ms-auto">Required</span>
         </h5>
         {% else %}
         <h5 class="card-header">
@@ -68,16 +68,15 @@
                     <td>Example</td>
                     <td>{{ field.example }}</td>
                 </tr>
-                <tr>
-                    <td>Multiplicity</td>
-                    <td>{{ field.multiplicity }}</td>
-                <tr>
+                {% if field.allowed_values|length > 0 %}
                 <td>Allowed Values</td>
                 <td>
                     {% for value in field.allowed_values %}
                     <span class="badge bg-dark">{{ value }}</span>
-                    {% endfor %}</td>
-            </tr>
+                    {% endfor %}
+                </td>
+                {% endif %}
+                </tr>
             </table>
 
         </div>
