--- a/templates/fields_template.html
+++ b/templates/fields_template.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="version" content="{{ version }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../../../images/favicon.ico" type="image/x-icon">
     <title>Single-cell Schemas</title>
@@ -230,6 +231,6 @@
       var components = {{ components | tojson | safe }};
     </script>
 
-    <script src="../../../js/scripts.js" type="text/javascript"></script>
+    <script src="../../../js/field_scripts.js" type="text/javascript"></script>
   </body>
 </html>
