--- a/templates/fields_template.html
+++ b/templates/fields_template.html
@@ -231,6 +231,6 @@
       var components = {{ components | tojson | safe }};
     </script>
 
-    <script src="../../../js/field_scripts.js" type="text/javascript"></script>
+    <script src="../../../js/fields_scripts.js" type="text/javascript"></script>
   </body>
 </html>
