--- a/templates/fields_template.html
+++ b/templates/fields_template.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="version" content="{{ version }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../../../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ rel_path_traverse }}images/favicon.ico" type="image/x-icon">
     <title>Single-cell Schemas</title>
 
     <!-- CSS -->
-    <link href="../../../css/styles.css" rel="stylesheet">
-    <link href="../../../css/fontawesome.6.7.2.all.min.css" rel="stylesheet">
-    <link href="../../../css/bootstrap.5.3.3.min.css" rel="stylesheet">
+    <link href="{{ rel_path_traverse }}css/styles.css" rel="stylesheet">
+    <link href="{{ rel_path_traverse }}css/fontawesome.6.7.2.all.min.css" rel="stylesheet">
+    <link href="{{ rel_path_traverse }}css/bootstrap.5.3.3.min.css" rel="stylesheet">
   </head>
   <body>
     <!-- Top navigation bar icons -->
@@ -73,9 +73,7 @@
               <select class="form-select" id="std_dropdown" data-bs-placement="right" 
                 data-bs-trigger="hover" data-bs-toggle="tooltip" title="">
                 {% for key, value in standards.items() %}
-                  <option value="{{ key }}" {% if key == "dwc" %}selected{% endif %}>
-                    {{ value }}
-                  </option>
+                  <option value="{{ key }}">{{ value }}</option>
                 {% endfor %}
               </select>
             </div>
@@ -94,9 +92,7 @@
               <select class="form-select" id="tech_dropdown" data-bs-placement="right" 
                 data-bs-trigger="hover" data-bs-toggle="tooltip" title="">
                 {% for key, value in technologies.items() %}
-                  <option value="{{ key }}" {% if key == "sc_rnaseq" %}selected{% endif %}>
-                    {{ value }}
-                  </option>
+                  <option value="{{ key }}">{{ value }}</option>
                 {% endfor %}
               </select>
             </div>
@@ -119,6 +115,7 @@
 
       <div class="col-6">
         <div class="accordion" id="fieldsAccordion">
+          <!-- Content here -->
           {% for component in components %}
           <div class="accordion-item">
             <div class="accordion-header">
@@ -223,14 +220,15 @@
     <div id="warning-modal-container"></div>
 
     <!-- JS -->
-    <script src="../../../js/jquery.3.6.0.min.js" type="text/javascript"></script>
-    <script src="../../../js/bootstrap.5.3.3.bundle.min.js" type="text/javascript"></script>
+    <script src="{{ rel_path_traverse }}js/jquery.3.6.0.min.js" type="text/javascript"></script>
+    <script src="{{ rel_path_traverse }}js/bootstrap.5.3.3.bundle.min.js" type="text/javascript"></script>
 
     <script>
       var outputFileData = {{ output_data | tojson | safe }};
       var components = {{ components | tojson | safe }};
+      var relPathTraverse = {{ rel_path_traverse | tojson | safe }};
     </script>
 
-    <script src="../../../js/fields_scripts.js" type="text/javascript"></script>
+    <script src="{{ rel_path_traverse }}js/fields_scripts.js" type="text/javascript"></script>
   </body>
 </html>
