--- a/templates/scss/styles.scss
+++ b/templates/scss/styles.scss
@@ -16,7 +16,7 @@ body {
   margin-bottom: 5px;
 }
 
-#doc_select_form {
+#docSelectForm {
   margin-left: 20px;
   .col {
     width: 250px;
@@ -29,11 +29,11 @@ body {
   margin-top: 20px;
 }
 
-.topMargin {
+.top-margin {
   margin-top: 100px;
 }
 
-.bottomMargin {
+.bottom-margin {
   margin-bottom: 50px;
 }
 
